--- a/aboutUs.html
+++ b/aboutUs.html
@@ -13,13 +13,14 @@
     <link rel="stylesheet" href="about-visit-services.css">
     
     <link href="https://fonts.googleapis.com/css2?family=Aboreto&family=Quattrocento:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=expand_circle_up" />
     
 </head>
 
 <body id="body-about">
  <nav>
     <div title="Back to Homepage">
-    <a href="homepage.html" class="logoHREF" > <img src="LOGO.png" class="logo" alt="serenity springs logo"> </a>
+    <a href="homepage.html" class="logoHREF" > <img src="LOGO.png" class="logo" alt="serenity springs logo" id="logo"> </a>
     </div>
     <ul class="sidebar">
         <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 96 960 960" width="26"><path d="m249 849-42-42 231-231-231-231 42-42 231 231 231-231 42 42-231 231 231 231-42 42-231-231-231 231Z"/></svg></a></li>
@@ -71,6 +72,11 @@
     </div>
   </div>
 </div>
+
+<a href="#logo" > <span id="top" class="material-symbols-outlined " >
+  expand_circle_up
+  </span>
+ </a>
 
 <script src="nav.js"></script>
 </body>
