--- a/articles.html
+++ b/articles.html
@@ -14,8 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quattrocento:wght@400;700&display=swap" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=expand_circle_up" />
 
@@ -189,7 +188,7 @@
 <div class ="medidateGroup">
 
     <div class="meditateHeading">
-        <h3 id="textHeading3">Medidate</h3>
+        <h3 id="textHeading3">Meditate</h3>
         <p id="P4">
             Research shows that meditation offers not only calm, but also helps with anxiety and depression, 
             cancer, chronic pain, asthma, heart disease and high blood pressure.
