--- a/aboutUs.html
+++ b/aboutUs.html
@@ -72,7 +72,7 @@
     </div>
   </div>
 </div>
-
+<footer>Copyright ©2024 Serenity Springs</footer>
 <a href="#logo" > <span id="top" class="material-symbols-outlined " >
   expand_circle_up
   </span>
